finished with css

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Open Sans Condensed', sans-serif;
+  background-color: #f0f8ff;
+  height: 100%;
+}
+
+html, #root {
+  height: 100%;
 }
