--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,9 @@
     height: 100%;
     font-size: 100px
 }
+
+.title {
+    font-size: 100px;
+    padding: 50px;
+    font-family: 'Open Sans Condensed', sans-serif;
+}
